Dask implemented in data_processing

--- a/examples/example_001.ipynb
+++ b/examples/example_001.ipynb
@@ -60,6 +60,10 @@
    "source": [
     "from DeezyMatch import finetune as dm_finetune\n",
     "\n",
+    "#EVERYTHING IN ./models ARE FAKE, JUST FOR DEMONSTRATE DATA TYPE\n",
+    "#REPLACE IT WITH REAL DATA WHEN EXECUTING, MUST BE THE SAME DATA TYPE (pickled lookupToken object)\n",
+    "#CHECK OUT THE SCRIPT TO CONVERT PICKLE DATA TO ZARRAY IN THIS FOLDER\n",
+    "\n",
     "# fine-tune a pretrained model stored at pretrained_model_path and pretrained_vocab_path \n",
     "dm_finetune(input_file_path=\"../inputs/input_dfm_notebook_001.yaml\", \n",
     "            dataset_path=\"../dataset/dataset-string-matching_finetune.txt\", \n",
@@ -424,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
